--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "node-red": {
     "version": ">=2.0.0",
     "nodes": {
-      "whatsapp": "nodes/whatsapp.js"
+      "signal": "nodes/signal.js"
     }
   },
   "bugs": {
